# lethe

./: .gitignore  .gitmodules  .ycm  CMakeLists.txt  TODO.md  build.sh  dub.json  reggaefile.d
cmake/: colorize.cmake  derelict-gl3.cmake  derelict-sdl2.cmake  derelict-util.cmake  pack-d.cmake
dioni/: API  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  dub.json  syntax
dioni/runtime/: actor.c  actor.h  collision.c  collision.h  container_of.h  event.c  event.h  list.h  mainloop.c  mainloop.h  objpool.h  particle.c  particle.h  rand.h  range.h  raw.h  render.c  render.h  tag.h  vec.h
dioni/sdpc/: CMakeLists.txt  dub.json
dioni/sdpc/source/sdpc/: parsers.d  primitives.d
dioni/sdpc/source/sdpc/combinators/: combinators.d
dioni/source/: CMakeLists.txt  ast.d  error.d  main.d  mustache.d  utils.d
dioni/source/ast/: aggregator.d  builtin.d  decl.d  declaration.d  expr.d  match.d  particle.d  state.d  stmt.d  symbols.d  type.d
dioni/source/ast/decl/: decl.d  package.d  particle.d
dioni/source/parser/: atom.d  decl.d  expr.d  match.d  package.d  particle.d  resource.d  state.d  stmt.d  utils.d
dioni/source/parser/decl/: decl.d  event.d  package.d  particle.d  state.d  tag.d  vertex.d
dioni/source/resource/: package.d  texture.d
dioni/stdlib/: event.c  event.h  interface.c  interface.h  list.h  particle.c  particle.h  statemachine.c  statemachine.h  vec.h
dioni/template/: funcdecl.mustache  funcproto.mustache
dioni/tests/: 001-mixin-test.dn  002-basic-syntax-test.dn  003-if-error.dn  003-loop-error.dn  004-event-range.dn  004-particle-match.dn  005-deferred-define.dn  006-particle-member.dn  007-new-particle.dn  008-if.dn  009-global-event.dn  009-particle-event.dn  010-global.dn  011-run-test.dn  012-vertex.dn  013-particle-event.dn  014-vertex.dn  999-basic-syntax-test.dn  run_test.sh  test.c
scripts/: ball.dn
source/: CMakeLists.txt  main.d
source/collision/: collision.d  hitbox.d  package.d  spatial_hash.d
source/dioni/: opaque.d  package.d  transparent.d
source/engine/: buffer.d  engine.d  lib.d  opengl.d  package.d  program.d  shader.d  texture.d  uniform.d  vertex.d
source/scene/: balls.d  scene.d  spatial_hash.d
source/scene/collision/: collision.d  hitbox.d  package.d  spatial_hash.d
source/shader/: frag.glsl  vs.glsl
textures/: list.txt
xu/: Cargo.toml
xu/src/: main.rs  rect.rs  texture_packer.rs
xu/src/packer/: guillotine.rs  mod.rs
